K8S/dataservice-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dataservice-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dataservice
  template:
    metadata:
      labels:
        app: dataservice
    spec:
      containers:
        - name: dataservice
          image: zvonimirs1975/dataservice:latest
---
apiVersion: v1
kind: Service
metadata:
  name: dataservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: dataservice
  ports:
  - name: dataservice
    protocol: TCP
    port: 80
    targetPort: 80
  - name: dataservice
    protocol: TCP
    port: 666
    targetPort: 666
