K8S/identity-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: identity-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: identity
  template:
    metadata:
      labels:
        app: identity
    spec:
      containers:
        - name: identity
          image: zvonimirs1975/identity:latest
---
apiVersion: v1
kind: Service
metadata:
  name: identity-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: identity
  ports:
  - name: identity
    protocol: TCP
    port: 80
    targetPort: 80
  - name: identitygrpc
    protocol: TCP
    port: 666
    targetPort: 666
